--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "dev": "node src/server.js"
   },
   "author": "Abhisek Gupta <guptaabhi6488@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^22.7.4",
+    "typescript": "^5.6.2"
+  }
 }
