--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "A user management service",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/server.js"
+    "dev": "node src/server.js",
+    "format:check": "prettier . --check",
+    "format:fix": "prettier . --write"
   },
   "author": "Abhisek Gupta <guptaabhi6488@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.7.4",
+    "prettier": "3.3.3",
     "typescript": "^5.6.2"
   }
 }
