--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "auth-service",
-  "version": "1.0.0",
-  "description": "A user management service",
-  "main": "index.js",
-  "scripts": {
-    "dev": "node src/server.js",
-    "format:check": "prettier . --check",
-    "format:fix": "prettier . --write"
-  },
-  "author": "Abhisek Gupta <guptaabhi6488@gmail.com>",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^22.7.4",
-    "prettier": "3.3.3",
-    "typescript": "^5.6.2"
-  }
+    "name": "auth-service",
+    "version": "1.0.0",
+    "description": "A user management service",
+    "main": "index.js",
+    "scripts": {
+        "dev": "node src/server.js",
+        "format:check": "prettier . --check",
+        "format:fix": "prettier . --write"
+    },
+    "author": "Abhisek Gupta <guptaabhi6488@gmail.com>",
+    "license": "ISC",
+    "devDependencies": {
+        "@eslint/js": "^9.11.1",
+        "@types/eslint__js": "^8.42.3",
+        "@types/node": "^22.7.4",
+        "eslint": "^9.11.1",
+        "prettier": "3.3.3",
+        "typescript": "^5.6.2",
+        "typescript-eslint": "^8.7.0"
+    }
 }
